[package]
name = "hyper_dict"
version = "0.1.0"
authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.0.14", features = ["cargo"]}
serde_json = "1.0.78"
ansi_term = "0.12.1"
ndarray = "0.15.4"
lair = "0.5.0"